# git-lfs-autotrack

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
git_lfs_autotrack/: __main__.py
tests/: test_main.py
