[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-lfs-autotrack"
version = "0.1.0"
description = "Pre-commit hook to automatically track large files in Git LFS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vainu Finland Oy" },
]
keywords = ["pre-commit", "git-lfs", "git", "large-file-storage"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
git-lfs-autotrack = "git_lfs_autotrack.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
